<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resultsDashboard.ResultsListFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/results_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_space_big"
        android:orientation="horizontal"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/results_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/search_for_hint"
            android:textAlignment="textStart"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/results_text_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_space_between_margin"
        android:layout_below="@id/results_text_container"
        android:layout_margin="@dimen/view_space_medium"
        android:textAlignment="textStart"
        android:textSize="16sp" />

    <Button
        android:id="@+id/result_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/results_text_container"
        android:layout_alignRight="@+id/results_text_description"
        android:enabled="false"
        android:text="@string/search_advance_button" />

    <com.shouquan.statelayout.StateLayout
        android:id="@+id/layout_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/results_text_description"
        app:sl_error_view="@layout/state_layout_error"
        app:sl_loading_view="@layout/state_layout_progress">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.shouquan.statelayout.StateLayout>
</RelativeLayout>
