<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.todoware.ejerciciomeli.ui.advanceFilter.SearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.todoware.ejerciciomeli.ui.resultsDashboard.ResultsListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_results">

        <action
            android:id="@+id/action_results_to_filters"
            app:destination="@id/navigation_home"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@anim/results_fade"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/navigation_home"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_results_to_details"
            app:destination="@id/navigation_notifications"
            app:enterAnim="@anim/results_right_to_left"
            app:exitAnim="@anim/results_fade"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/navigation_notifications"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.todoware.ejerciciomeli.ui.description.DescriptionFragment"
        android:label="@string/description_screen_title"
        tools:layout="@layout/fragment_description">

    </fragment>
</navigation>
